# ollama_copilot_enterprise

./: .gitignore  Makefile  README.md  pyproject.toml
ollama_copilot_enterprise/: chatbot.py  chunker.py  utils.py
